; ModuleID = '/home/carl/AnghaBench/openssl/crypto/pkcs12/extr_p12_sbag.c_PKCS12_SAFEBAG_create0_pkcs8.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/pkcs12/extr_p12_sbag.c_PKCS12_SAFEBAG_create0_pkcs8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__, i32 }
%struct.TYPE_5__ = type { i32* }

@PKCS12_F_PKCS12_SAFEBAG_CREATE0_PKCS8 = common dso_local global i32 0, align 4
@ERR_R_MALLOC_FAILURE = common dso_local global i32 0, align 4
@NID_pkcs8ShroudedKeyBag = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_6__* @PKCS12_SAFEBAG_create0_pkcs8(i32* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_6__*, align 8
  store i32* %0, i32** %3, align 8
  %5 = call %struct.TYPE_6__* (...) @PKCS12_SAFEBAG_new()
  store %struct.TYPE_6__* %5, %struct.TYPE_6__** %4, align 8
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %7 = icmp eq %struct.TYPE_6__* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load i32, i32* @PKCS12_F_PKCS12_SAFEBAG_CREATE0_PKCS8, align 4
  %10 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %11 = call i32 @PKCS12err(i32 %9, i32 %10)
  store %struct.TYPE_6__* null, %struct.TYPE_6__** %2, align 8
  br label %22

12:                                               ; preds = %1
  %13 = load i32, i32* @NID_pkcs8ShroudedKeyBag, align 4
  %14 = call i32 @OBJ_nid2obj(i32 %13)
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 1
  store i32 %14, i32* %16, align 8
  %17 = load i32*, i32** %3, align 8
  %18 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %19, i32 0, i32 0
  store i32* %17, i32** %20, align 8
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  store %struct.TYPE_6__* %21, %struct.TYPE_6__** %2, align 8
  br label %22

22:                                               ; preds = %12, %8
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  ret %struct.TYPE_6__* %23
}

declare dso_local %struct.TYPE_6__* @PKCS12_SAFEBAG_new(...) #1

declare dso_local i32 @PKCS12err(i32, i32) #1

declare dso_local i32 @OBJ_nid2obj(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
